crates/rspack_error/tests/fixtures/js_syntax_error/fixtures__js_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: js_syntax_error
---
error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/js_syntax_error/index.js:2:10
  │
2 │ const  D {
  │          ^ Expected a semicolon

error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/js_syntax_error/index.js:2:8
  │
2 │ const  D {
  │        ^ 'const' declarations must be initialized

error[javascript]: JavaScript parsing error
  ┌─ tests/fixtures/js_syntax_error/index.js:6:1
  │
6 │ }
  │ ^ Expression expected


